# meson-demo

./: README.md  meson.build
exports/math/: add2.h
src/: main.cpp
src/lib/: add2.cpp
tests/: add2.test.cpp
